fixes gauges wrapping

--- a/app/index.css
+++ b/app/index.css
@@ -321,7 +321,6 @@ main .container {
 }
 
 .gauges {
-  width: 80%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
