--- a/app/stylesheets/gauge-page.scss
+++ b/app/stylesheets/gauge-page.scss
@@ -34,7 +34,7 @@
 }
 
 .gauges {
-  width: 80%;
+  // width: 80%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
